--- a/jobpath-app/package.json
+++ b/jobpath-app/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-browser": "~11.2.10",
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
+    "@ngrx/store": "^11.1.1",
     "firebase": "^8.4.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
